--- a/shrek.html
+++ b/shrek.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-
-  <title>Shrek's CV</title>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Shrek's CV</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-      <img src="shrek.jpeg">
-      <header><h1>Shrek</h1></header>
-      <p>Swamp Enthusiast | Ogre Extraordinaire</p>
-      <h2>Contact Information</h2>
-      <p><b>Email:</b> shrek@swampmail.com</p>
-      <p><b>Phone:</b> +123 456 7890</p>
-      <b>Location:</b> Shrek's Swamp, Far Far Away
-      <h2>Skills</h2>
-      <ul>
-        <li>Swamp Maintenance</li>
-        <li>Ogre Roaring</li>
-        <li>Onion Layer Analysis</li>
-        <li>Donkey Management</li>
-        <li>Dragon Communication</li>
-      </ul>
-      <h2>Work Experience</h2>
-      <h3>Swamp Owner</h3>
-      <p>Far Far Away | 2001 - Present </p>
-      <p>Responsible for maintaining the swamp and keeping unwelcome guests away.</p>
-      <h2>Hero of Far Far Away</h2>
-      <p>Far Far Away | 2004 - Present</p>
-      <p>Saved Princess Fiona, defeated Lord Farquaad, and rescued the kingom from multiple threats. </p>
-      <h2>Education</h2>
-      <p><b>Degree:</b> Advanced Swampology</p>
-      <p><b>Institution:</b> Ogre Academy, Far Far Away</p>
-      <p>"Ogres are like onions. Onions have layers. Ogres have layers." - Shrek</p>  
+      <header>
+        <img src="shrek.jpeg" alt="Shrek in his swamp">
+        <h1>Shrek</h1>
+        <p>Swamp Enthusiast | Ogre Extraordinaire</p>
+      </header>
+
+      <section>
+        <h2>Contact Information</h2>
+        <p><b>Email:</b> shrek@swampmail.com</p>
+        <p><b>Phone:</b> +123 456 7890</p>
+        <p><b>Location:</b> Shrek's Swamp, Far Far Away</p>
+      </section>
+
+      <section>
+        <h2>Skills</h2>
+        <ul>
+          <li>Swamp Maintenance</li>
+          <li>Ogre Roaring</li>
+          <li>Onion Layer Analysis</li>
+          <li>Donkey Management</li>
+          <li>Dragon Communication</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Work Experience</h2>
+        <h3>Swamp Owner</h3>
+        <p>Far Far Away | 2001 - Present </p>
+        <p>Responsible for maintaining the swamp and keeping unwelcome guests away.</p>
+        <h3>Hero of Far Far Away</h3>
+        <p>Far Far Away | 2004 - Present</p>
+        <p>Saved Princess Fiona, defeated Lord Farquaad, and rescued the kingom from multiple threats. </p>
+      </section>
+
+      <section>
+        <h2>Education</h2>
+        <p><b>Degree:</b> Advanced Swampology</p>
+        <p><b>Institution:</b> Ogre Academy, Far Far Away</p>
+        <p>"Ogres are like onions. Onions have layers. Ogres have layers." - Shrek</p> 
+      </section> 
+
     </main>
+    <script src="" async defer></script>
 </body>
 </html>
